add_executable(timer1 timer1.cpp)
target_link_libraries(timer1 lynx)

add_executable(timer2 timer2.cpp)
target_link_libraries(timer2 lynx)

add_executable(timer3 timer3.cpp)
target_link_libraries(timer3 lynx)

add_executable(timer4 timer4.cpp)
target_link_libraries(timer4 lynx)

add_executable(timer5 timer5.cpp)
target_link_libraries(timer5 lynx)
